--- a/src/components/Toolbar/Toolbar.module.scss
+++ b/src/components/Toolbar/Toolbar.module.scss
@@ -1,14 +1,16 @@
 
 header {
+    // padding-top: 15px;
+    background-color: transparent;
     height: 70px;
-    background-color: #fff;
+    // background-color: rgba(	223,204,153, 0.7);
     // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
     width: 100%;
-    z-index: 3;
+    z-index: 100;
+    position: relative;
     // padding: 40px 10px;
 
     @media only screen and (max-width: 500px) {
@@ -21,9 +23,14 @@ header {
 
 
 header.sticky {
-    background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
+    background-color: #f5f5f5 ;
     padding: 5px 10px;
+    position: fixed;
 }
+
+// header.NotFixed {
+//     position: relative;
+// }
 
 
 .Logo {
@@ -46,7 +53,7 @@ header.sticky {
      flex: 0 0 100%;
     //  margin-left: 10px;
     margin-bottom: 20px;
-     background-color:#F0F0F0;
+     background-color:#E0E0E0;
 
      .Search{
         &__Input {
@@ -62,7 +69,7 @@ header.sticky {
         font-family: inherit;
         font-size: 20px;
         color:black;
-        background-color:#F0F0F0;
+        background-color:#E0E0E0;
         border: none;
         border-radius: 100px;
         width: 90%;
@@ -77,14 +84,14 @@ header.sticky {
     }
 
     &__Input:focus + &__Button {
-        background-color: #E0E0E0;
+        background-color: transparent;
     }
 
     
     &__Button {
         cursor: pointer;
         border: none;
-        background-color:#F0F0F0;
+        background-color:#E0E0E0;
         &:focus {
             outline: none;
         }
@@ -107,6 +114,36 @@ header.sticky {
         // background: none;
         background-color: transparent;
        
+}
+
+header.sticky .Search {
+    &__Input {
+
+        background-color: transparent ;
+        border: 2px solid gray;
+    }
+
+    &__Input:focus + &__Button {
+        
+        background-color: #dfcc99 ;
+    }
+    &__Button {
+        background-color: transparent ;
+           
+    }
+
+    &__Button {
+        cursor: pointer;
+        border: none;
+        background-color: transparent;
+        &:focus {
+            outline: none;
+        }
+        &:active {
+            transform: translateY(2px);
+        }
+    }
+
 }
 
 header.sticky .Image__Button{
@@ -186,7 +223,7 @@ header.sticky .Image__Button{
 
 
 header.sticky .UserNav{
-    color: black;
+    color: #5a5757;
     font-weight: 500;
 }
 
@@ -236,19 +273,18 @@ header.sticky .Hamburger{
     width: 50px;
     height: 50px;
     padding: 10px;
-    background-color: #fff;
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
 
-    &:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 10px 2px rgba(0,0,0,.1);
-    }
+    // &:hover {
+    //     // transform: translateY(-2px);
+    //     // box-shadow: 0 10px 2px rgba(0,0,0,.1);
+    // }
 
     &:active {
         transform: translateY(-1px);
-        box-shadow: 0 5px 10px rgba(0,0,0,.2);
     }
 }
 
@@ -256,7 +292,7 @@ header.sticky .Hamburger{
     position: relative;
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: #5a5757;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -318,7 +354,8 @@ header.sticky .Hamburger{
     // opacity: 0;
     // visibility: hidden;
     // background: red;
-    background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
+    background-color: #dfcc99 ;
+    // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
     opacity: 0.95;
 
     transform: scale(1);
