--- a/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
+++ b/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
@@ -33,11 +33,12 @@
 
 .Title{
     position: relative;
-    top: 150px;
+    top: 100px;
     z-index: 1;
     text-align: center;
     width: 100%;
-    background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
+    // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
+    background-color: #5a5757  ;
     display: inline-block;
     -webkit-background-clip: text;
     background-clip: text;
