--- a/src/containers/Blogs/NewPetBlog/NewPetBlog.module.scss
+++ b/src/containers/Blogs/NewPetBlog/NewPetBlog.module.scss
@@ -1,6 +1,6 @@
 .Container {
     width: 100%;
-    height: 100%;
+    height: 950px;
     display: flex;
     justify-content: center;
     font-size: 50px;
@@ -10,6 +10,7 @@
 .FormContainer {
     background-color: white;
     width: 80%;
+    height: 80%;
     padding: 20px 10px;
     // margin-top: 10px;
     color: #828282;
