--- a/src/components/PetCard/PetCard.module.scss
+++ b/src/components/PetCard/PetCard.module.scss
@@ -3,7 +3,8 @@
     margin: 0 15px 30px ;
     padding: 10px;
     // background: #fff;
-    background-color: #dfcc99 ;
+    // background-color: #dfcc99 ;
+    background-color: rgba(	223,204,153, 0.7);
     overflow: hidden;
     border-radius: 15px;
     transition: all 1s ease;
