--- a/src/containers/Blogs/NewPetBlog/NewPetBlog.module.scss
+++ b/src/containers/Blogs/NewPetBlog/NewPetBlog.module.scss
@@ -1,6 +1,6 @@
 .Container {
     width: 100%;
-    height: 950px;
+    height: 970px;
     display: flex;
     justify-content: center;
     font-size: 50px;
@@ -105,9 +105,11 @@
     // width: 30%;
     cursor: pointer;
     // width: 50%;
-    color: black;
+    // background-color: #dfcc99 ;
+    color: #5a5757;
+    // color: black;
     font-weight: 500;
-    background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
+    // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
     border: none;
     // color: black;
     // font-weight: bold;
@@ -119,7 +121,7 @@
     outline: none;
 
     &:hover {
-        transform: translateY(-3px);
+        transform: translateY(-2px);
         box-shadow: 0 10px 2px rgba(0,0,0,.2);
     }
     &:active {
