--- a/src/containers/Blogs/Pets/Pets.module.scss
+++ b/src/containers/Blogs/Pets/Pets.module.scss
@@ -1,5 +1,6 @@
 .container{
-    min-height: 87.5vh;
+    // min-height: 87.5vh;
+    min-height: 100vh;
     margin: auto;
     padding-top: 30px;
     columns: 4;
