--- a/src/components/Toolbar/Toolbar.module.scss
+++ b/src/components/Toolbar/Toolbar.module.scss
@@ -1,26 +1,20 @@
 
 header {
-    // padding-top: 15px;
     background-color: transparent;
     height: 70px;
-    // background-color: rgba(	223,204,153, 0.7);
     background-color: rgba(	223,204,153, 1);
     color: #5a5757;
-    // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     z-index: 100;
     position: relative;
-    // padding: 40px 10px;
-
     @media only screen and (max-width: 500px) {
         flex-wrap: wrap;
         height: 110px;
         align-content: space-around;
     }
-    // transition: 250ms ease-in;
 }
 
 header.sticky {
@@ -28,11 +22,6 @@ header.sticky {
     padding: 5px 10px;
     position: fixed;
 }
-
-// header.NotFixed {
-//     position: relative;
-// }
-
 
 .Logo {
     height: 40px;
@@ -45,14 +34,12 @@ header.sticky {
 }
 
 .Search {
-    // background-color: orangered; 
     flex: 0 0 50%;
     display: flex;
 
     @media only screen and (max-width: 500px) {
      order: 1;   
      flex: 0 0 100%;
-    //  margin-left: 10px;
     margin-bottom: 20px;
      background-color:#E0E0E0;
 
@@ -107,12 +94,10 @@ header.sticky {
 }
 
 .Image__Button {
-        // margin-top: 68px;
         cursor: pointer;
         border: none;
         outline: none;
         border-radius: 50%;
-        // background: none;
         background-color: transparent;
        
 }
@@ -151,37 +136,25 @@ header.sticky .Image__Button{
     background: transparent;
 }
 
-// ul {
-//     // display: flex;
-//     // flex-direction: column;
-// }
+.ButtonWithoutPic {
+    outline: none;
+    border: none;
+    background-color: transparent;
+}
+.ButtonWithoutPic i{
+    font-size: 35px;
+    cursor: pointer;
+    &:hover {
+        transform: translateY(-2px);
+        outline: none;
+    }
+    &:active {
+        transform: translateY(-1px);
+        outline: none;
+        background-color: transparent;
+    }
+}
 
-// .Image__Button:hover .DropDown {
-//     opacity: 1;
-//     visibility: visible;
-// }
-
-// .DropDown {
-//     background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
-//     font-weight: 500;
-//     border: 0.5px solid black;
-//     opacity: 0;
-//     visibility: hidden;
-//     transition: .5s;
-//     width: 100px;
-// }
-
-// ul li {
-//     list-style: none;
-//     font-size: 20px;
-// }
-
-
-
-// ul li a {
-//     color: #F0F0F0;
-//     text-decoration: none;
-// }
 
 
 .UserNav {
@@ -190,10 +163,7 @@ header.sticky .Image__Button{
     display: flex;
 }
 
-// .NavIcon {
-//     height: 2.25rem;
-//     width: 2.25rem;
-// }
+
 
 .Image {
     border: none;
@@ -206,9 +176,7 @@ header.sticky .Image__Button{
     &:focus {
         outline: none;
     }
-    // &:active {
-    //     transform: translateY(2px);
-    // }
+
     &:hover {
         transform: translateY(-2px);
         outline: none;
@@ -228,17 +196,6 @@ header.sticky .UserNav{
     font-weight: 500;
 }
 
-// .LoginButton{
-//     border: none;
-//     padding: 5px;
-//     // display: block;
-//     font-weight: 500;
-//     color: #F4F2F2;
-//     font-size: 20px;
-//     outline: none;
-//     cursor: pointer;
-//     background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
-// }
 
 header.sticky .LoginButton{
     background: transparent;
@@ -249,16 +206,9 @@ header.sticky .Hamburger{
     background: transparent;
 }
 
-// .MenuWrap {
-//     z-index: 5;
-//     // position: fixed;
-// }
+
 
 .Toggler{
-    // position: absolute;
-    // top: 0;
-    // right: 0;
-    // z-index: 6;
     cursor: pointer;
     width: 40px;
     height: 40px;
@@ -266,9 +216,6 @@ header.sticky .Hamburger{
 }
 
 .Hamburger {
-    // position: absolute;
-    // top:0;
-    // right: 0;
     cursor: pointer;
     z-index: 5;
     width: 50px;
@@ -278,18 +225,12 @@ header.sticky .Hamburger{
     display: flex;
     align-items: center;
     justify-content: center;
-
-    // &:hover {
-    //     // transform: translateY(-2px);
-    //     // box-shadow: 0 10px 2px rgba(0,0,0,.1);
-    // }
-
     &:active {
         transform: translateY(-1px);
     }
 }
 
- .Hamburger > div {
+.Hamburger > div {
     position: relative;
     width: 100%;
     height: 2px;
@@ -300,7 +241,7 @@ header.sticky .Hamburger{
     transition: all 0.5s;
 }
 
- .Hamburger > div:before,
+.Hamburger > div:before,
 .Hamburger > div:after {
     content: '';
     position: absolute;
@@ -329,21 +270,9 @@ header.sticky .Hamburger{
     transform: rotate(225deg);
 }
 
-// .MenuWrap .Menu {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     overflow: hidden;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-// }
+
 
 .FullMenu {
-    // color: black;
-    // font-size: 30px;
     position: fixed;
     overflow: hidden;
     top:0;
@@ -352,16 +281,9 @@ header.sticky .Hamburger{
     height: 100vh;
     width: 100%;
     background-size: cover;
-    // opacity: 0;
-    // visibility: hidden;
-    // background: red;
     background-color: #dfcc99 ;
-    // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
     opacity: 0.95;
-
     transform: scale(1);
-    // transition: opacity 0.4s ease;
-    // transition:  2s;
     animation: moveInFromRight 0.3s ease-out
 }
 
@@ -370,7 +292,6 @@ header.sticky .Hamburger{
     justify-content: center;
     align-items: center;
     height: 100%;
-    // text-decoration: none;
 }
 
 .Content .PageMenu {
@@ -378,14 +299,12 @@ header.sticky .Hamburger{
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: 300;
-    // text-decoration: underline;
     list-style: none;
     cursor: pointer; 
 
     &:hover {
         transform: scale(1);
         opacity: 0.7;
-        // filter: blur(2px);
     }
 }
 
@@ -406,7 +325,6 @@ header.sticky .Hamburger{
         margin-bottom: 10px;
 
         &:hover {
-            // transform: translateY(-3px);
             transform: scale(1.5);
             opacity: 1;
             filter: blur(0);
@@ -425,7 +343,6 @@ header.sticky .Hamburger{
     right: 12px;
     height: 25px;
     width: 25px;
-    // border-radius: 50%;
     width: 40px;
     height: 40px;
     border: none;
@@ -437,7 +354,6 @@ header.sticky .Hamburger{
     transition: all .2s;
     font-weight: 700;
     transition: 0.5s;
-    // transition:  2s;
 
 
     &:hover {
@@ -458,20 +374,13 @@ header.sticky .Hamburger{
     
     0% {
         opacity: 0;
-        // transform: translateX(100px);
         transform: scale(0);
 
     }
 
-    // 80% {
-    //     transform: translateX(-10px);
-    // }
-
     100% {
         opacity: 0.9;
         transform: scale(1);
-
-        // transform: translateX(0);
     }
 }
 
