--- a/src/containers/Blogs/NewPetBlog/NewPetBlog.module.scss
+++ b/src/containers/Blogs/NewPetBlog/NewPetBlog.module.scss
@@ -12,22 +12,17 @@
     width: 80%;
     height: 92%;
     padding: 20px 10px;
-    // margin-top: 10px;
     color: #828282;
     text-align: center;
-    // border-radius: 25px;
     position: relative;
 }
 
 .Form {
     margin-bottom: 10px;
-    // display: flex;
-    // justify-content: space-around;
 }
 
 
 .Title {
-    // flex: 1;
     position: relative;
     display: inline-block;
     font-size: 20px;
@@ -39,15 +34,6 @@
     padding: 0 20px;
     border-radius: 25px 0 0 25px;
     margin-right: 5px;
-    // font-size: 2rem;
-    // margin: 10px 10px 20px 10px;
-    // width: 80%;
-    // padding: 10px;
-    // background-color: #f0f0f0;
-    // border: none;
-    // border-radius: 10px;
-    // outline: none;
-    // box-shadow: 0 10px 20px rgba(0,0,0,.1);
 }
 
 .ShortDesc {
@@ -65,35 +51,6 @@
     margin-top: 10px;
 }
 
-::ng-deep .Type{
-    background-color: #F0F0F0 !important;
-    form-control{
-        // .rbt-input-multi form-control rbt-input{
-        position: relative;
-        display: inline-block;
-        font-size: 20px;
-        background-color: #F0F0F0 !important;
-        width: 80%;
-        height: 50px;
-        border: none;
-        outline: none;
-        padding: 0 20px;
-        border-radius: 25px;
-        margin-right: 5px;
-        margin-top: 10px;
-    // }   
-    }
-}
-
-// .Typeahead {
-//     #typeAhead{
-//         ::ng-deep{
-//             .rbt .rbt-input{
-//                 background-color: green !important;
-//             }
-//         }
-//     }
-// }
 
 
 .UploadButton {
@@ -102,22 +59,11 @@
     font-size: 20px;
     border-radius: 0 25px 25px 0;
     height: 50px;
-    // width: 30%;
     cursor: pointer;
-    // width: 50%;
-    // background-color: #dfcc99 ;
     color: #5a5757;
-    // color: black;
     font-weight: 500;
-    // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
     border: none;
-    // color: black;
-    // font-weight: bold;
-    // margin: 0 0 20px;
     padding: 10px;
-    // font-size: 15px;
-    // text-transform: uppercase;
-    // border-radius: 20px;
     outline: none;
 
     &:hover {
@@ -131,39 +77,42 @@
     
 }
 
-.rbt-input-hint-container input {
-    height: 64px;
-    background-color: green;
+
+
+@media (max-width: 600px) {
+    .UploadButton {
+        position: relative;
+        display: inline-block;
+        font-size: 20px;
+        background-color: #F0F0F0;
+        width: 80%;
+        height: 50px;
+        border: none;
+        outline: none;
+        padding: 0 20px;
+        border-radius: 25px;
+        margin-right: 5px;
+        margin-top: 10px;
+    }
+
+    .Title {
+        position: relative;
+        display: inline-block;
+        font-size: 20px;
+        background-color: #F0F0F0;
+        width: 80%;
+        height: 50px;
+        border: none;
+        outline: none;
+        padding: 0 20px;
+        border-radius: 25px;
+        margin-right: 5px;
+        margin-top: 10px;
+    }
+
+    .Container {
+        height: 1000px;
+    }
+    
+
 }
-// .Typeahead {
-//     width: 80%;
-//     font-size: 40px;
-//     position: absolute;
-//     top:100px;
-// }
-
-// .SubmitButton {
-//     cursor: pointer;
-//     width: 20%;
-//     border: none;
-//     color: black;
-//     margin: 0 0 10px;
-//     font-weight: bold;
-//     padding: 10px;
-//     font-size: 15px;
-//     border-radius: 20px;
-//     text-transform: uppercase;
-//     outline: none;
-// }
-
-
-// .Title:active {
-//     border: none; 
-//     outline: none;
-// }
-// .Button{
-//     flex: 1;
-//     margin: 10px 10px 20px 10px;
-//     padding: 10px;
-//     // height: 400px;
-// }
