--- a/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
+++ b/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
@@ -1,5 +1,8 @@
 .FullPetDetailsContainer {
-    padding-top: 90px;
+    // padding-top: 90px;
+    position: relative;
+    width: 100%;
+    height: 87.5vh;
 }
 
 
@@ -8,13 +11,14 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
-    min-width: 100%;
-    min-height: 100%;
-    background-position: 0 30%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    // height: 100%;
+    min-height: 100vh;
+    // min-width: 100%;
+    // min-height: 100%;
+    // background-position: 0 30%;
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-attachment: fixed;
     object-fit: cover;
     clip-path: circle(0px at center);
 }
