--- a/src/components/RichTextEditor/RichTextEditor.module.scss
+++ b/src/components/RichTextEditor/RichTextEditor.module.scss
@@ -5,12 +5,13 @@
     flex-wrap: wrap;
     list-style: none;
     padding: 0;
-    margin: 0 10px;
+    color: #39b7dd;
+    // margin: 0 10px;
     margin-bottom: 0;
     // overflow: auto;
-    width: 85%;
-    justify-content: center;
-    border-radius: 10px;
+    // width: 85%;
+    // justify-content: center;
+    // border-radius: 10px;
     animation: moveInFromLeft 0.5s ease-out;
 }
 
@@ -21,8 +22,9 @@
     outline: none;
     padding: 5px;
     display: block;
-    font-size: 20px;  
+    font-size: 16px;  
     cursor: pointer;
+    background-color: rgba(223,204,153, 0.7);
     
     &:hover {
         transform: translateY(-3px);
@@ -34,50 +36,48 @@
     }
 }
 
-.RichTextButtonPlus {
-    border: none;
-    padding: 5px;
-    display: block;
-    font-size: 25px;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    outline: none;
-    cursor: pointer;
-    position: absolute;
-    left:6%;
-    color: #5a5757;
+// .RichTextButtonPlus {
+//     border: none;
+//     padding: 5px;
+//     display: block;
+//     font-size: 25px;
+//     height: 40px;
+//     width: 40px;
+//     outline: none;
+//     cursor: pointer;
+//     position: absolute;
+//     color: #5a5757;
 
-    &:hover {
-        transform: translateY(-2px);
-    }
-    &:active {
-        transform: translateY(-1px);
-    }
+//     &:hover {
+//         transform: translateY(-2px);
+//     }
+//     &:active {
+//         transform: translateY(-1px);
+//     }
 
-}
+// }
 
-.RichTextButtonMinus {
-    font-size: 25px; 
-    border: none;
-    padding: 5px;
-    display: block;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    outline: none;
-    cursor: pointer;
-    position: absolute;
-    left:6%;
-    color: #5a5757;
+// .RichTextButtonMinus {
+//     font-size: 25px; 
+//     border: none;
+//     padding: 5px;
+//     display: block;
+//     height: 40px;
+//     width: 40px;
+//     border-radius: 50%;
+//     outline: none;
+//     cursor: pointer;
+//     position: absolute;
+//     left:6%;
+//     color: #5a5757;
 
-    &:hover {
-        transform: translateY(-2px);
-    }
-    &:active {
-        transform: translateY(-1px);
-    }
-}
+//     &:hover {
+//         transform: translateY(-2px);
+//     }
+//     &:active {
+//         transform: translateY(-1px);
+//     }
+// }
 
 
 
@@ -85,8 +85,8 @@
     border: none;
     padding: 5px;
     display: block;
-    font-size: 20px;
-    background-color: #EFEFEF;
+    font-size: 15.5px;
+    background-color: rgba(223,204,153, 0.7);
     cursor: pointer;
 
     &:hover {
@@ -99,45 +99,68 @@
     }
 }
 
-.Input{
-    font-size: 100%; 
-    border: none;
-    padding: 5px;
-    display: block;
+// .Input{
+//     font-size: 100%; 
+//     border: none;
+//     padding: 5px;
+//     display: block;
     
-}
+// }
 
-.RichTextButtonPlus, .RichTextButtonMinus i {
-    width: '100%'; 
-    height:'100%'; 
-    font-size:'16px'; 
-    color:'black';
-    margin-top: '4px'
-}
+// .RichTextButtonPlus, .RichTextButtonMinus i {
+//     width: '100%'; 
+//     height:'100%'; 
+//     font-size:'16px'; 
+//     color:'black';
+//     margin-top: '4px'
+// }
 
 .TextArea{
-    height: 400px;
-    margin: 10px;
-    margin-top: 0;
-    margin-bottom: 0;
-    box-shadow: 0 10px 20px rgba(0,0,0,.1);
+    height: 320px;
+    margin: 10px 0;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 2px solid rgba(223,204,153, 1)  ;
     padding: 10px;
-    width: 80%;
-    background-color: #F0F0F0;
-    border-radius: 10px;
+    width: 100%;
+    overflow: auto;
+    // margin-top: 0;
+    // margin-bottom: 0;
+    // box-shadow: 0 10px 20px rgba(0,0,0,.1);
+    // padding: 10px;
+    // width: 80%;
+    // background-color: #F0F0F0;
+    // border-radius: 10px;
+}
+
+@media screen and (max-width: 600px) {
+    .TextArea {
+        height: 120px;
+    }  
 }
 
 
 .SubmitButton {
-    font-size: 62.5%; 
+    background: rgba(223,204,153, 0.7);
+    text-align: center;
+    width: 50%;
+    padding: 15px;
+    border-radius: 5px;
     border: none;
-    padding: 5px 25px;
-    color: #5a5757;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px; 
+    // border: none;
+    // padding: 5px 25px;
+    // color: #5a5757;
+    margin: 5px auto;
     font-weight: 500;
-    font-size: 25px;
-    outline: none;
+    display: flex;
+    justify-content: center;
+    // font-size: 25px;
+    // outline: none;
     cursor: pointer;
-    border-radius: 100px;
+    // border-radius: 100px;
 
     &:hover {
         transform: translateY(-2px);
@@ -186,155 +209,155 @@
 
 
 
-@media (max-width: 1200px) {
+// @media (max-width: 1200px) {
     
-        .toolList{
-            margin-left: 50px;            
-        }
+//         .toolList{
+//             margin-left: 50px;            
+//         }
 
-        .RichTextButton {
-            font-size: 14px; 
-        }
+//         .RichTextButton {
+//             font-size: 14px; 
+//         }
 
-        .DropDown{
-            font-size: 14px; 
-        }
+//         .DropDown{
+//             font-size: 14px; 
+//         }
 
-        .RichTextButtonMinus {
-            font-size: 14px; 
-            height: 30px;
-            width: 30px;
+//         .RichTextButtonMinus {
+//             font-size: 14px; 
+//             height: 30px;
+//             width: 30px;
             
-        }
+//         }
 
-        .RichTextButtonPlus {
-            font-size: 14px; 
-            height: 30px;
-            width: 30px;
+//         .RichTextButtonPlus {
+//             font-size: 14px; 
+//             height: 30px;
+//             width: 30px;
             
-        }
+//         }
         
     
-}
+// }
 
 
 
-@media (max-width: 848px) {
+// @media (max-width: 848px) {
     
-    .toolList{
-        margin-left: 50px;            
-    }
+//     .toolList{
+//         margin-left: 50px;            
+//     }
 
-    .RichTextButton {
-        font-size: 12px; 
-    }
+//     .RichTextButton {
+//         font-size: 12px; 
+//     }
 
-    .DropDown{
-        font-size: 12px; 
-    }
+//     .DropDown{
+//         font-size: 12px; 
+//     }
 
-    .RichTextButtonMinus {
-        font-size: 12px; 
-        height: 25px;
-        width: 25px;
+//     .RichTextButtonMinus {
+//         font-size: 12px; 
+//         height: 25px;
+//         width: 25px;
         
-    }
+//     }
 
-    .RichTextButtonPlus {
-        font-size: 12px; 
-        height: 25px;
-        width: 25px;
+//     .RichTextButtonPlus {
+//         font-size: 12px; 
+//         height: 25px;
+//         width: 25px;
         
-    }
+//     }
     
 
-}
+// }
 
 
-@media (max-width: 740px) {
+// @media (max-width: 740px) {
     
-    .toolList{
-        margin-left: 50px;            
-    }
+//     .toolList{
+//         margin-left: 50px;            
+//     }
 
-    .RichTextButton {
-        font-size: 10px; 
-    }
+//     .RichTextButton {
+//         font-size: 10px; 
+//     }
 
-    .DropDown{
-        font-size: 10px; 
-    }
+//     .DropDown{
+//         font-size: 10px; 
+//     }
 
-    .RichTextButtonMinus {
-        font-size: 10px; 
-        height: 20px;
-        width: 20px;
+//     .RichTextButtonMinus {
+//         font-size: 10px; 
+//         height: 20px;
+//         width: 20px;
         
-    }
+//     }
 
-    .RichTextButtonPlus {
-        font-size: 10px; 
-        height: 20px;
-        width: 20px;
+//     .RichTextButtonPlus {
+//         font-size: 10px; 
+//         height: 20px;
+//         width: 20px;
         
-    }
+//     }
     
 
-}
+// }
 
 
-@media (max-width: 660px) {
+// @media (max-width: 660px) {
     
-    .toolList{
-        margin-left: 50px;            
-    }
+//     .toolList{
+//         margin-left: 50px;            
+//     }
 
-    .RichTextButton {
-        font-size: 9px; 
-    }
+//     .RichTextButton {
+//         font-size: 9px; 
+//     }
 
-    .DropDown{
-        font-size: 9px; 
-    }
+//     .DropDown{
+//         font-size: 9px; 
+//     }
 
-    .RichTextButtonMinus {
-        font-size: 9px; 
-        height: 16px;
-        width: 16px;
-    }
+//     .RichTextButtonMinus {
+//         font-size: 9px; 
+//         height: 16px;
+//         width: 16px;
+//     }
 
-    .RichTextButtonPlus {
-        font-size: 9px; 
-        height: 16px;
-        width: 16px;
-    }
+//     .RichTextButtonPlus {
+//         font-size: 9px; 
+//         height: 16px;
+//         width: 16px;
+//     }
     
 
-}
+// }
 
 
 
-@media (max-width: 600px) {
+// @media (max-width: 600px) {
     
-    .toolList{
-        margin-left: 30px;     
-        // width: 100%;  
-        // display: block;
-        // flex-wrap: wrap;
-        // width: 200px;     
-    }
+//     .toolList{
+//         margin-left: 30px;     
+//         // width: 100%;  
+//         // display: block;
+//         // flex-wrap: wrap;
+//         // width: 200px;     
+//     }
 
-    i {
-        border-radius: 0;
-    }
+//     i {
+//         border-radius: 0;
+//     }
 
-    .RichTextButton {
-        font-size: 8px; 
-    }
+//     .RichTextButton {
+//         font-size: 8px; 
+//     }
 
-    .DropDown{
-        font-size: 8px; 
-    }
+//     .DropDown{
+//         font-size: 8px; 
+//     }
 
-}
+// }
 
