--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,11 @@ code {
 *{
   margin: 0;
   padding: 0;
+  outline: none;
 
 
 }
+
 
 *,
 *::after,
@@ -27,5 +29,9 @@ code {
 
 html {
   box-sizing: border-box;
+}
+
+::-webkit-input-placeholder {
+  text-transform: uppercase;
 }
 
