--- a/src/components/Toolbar/Toolbar.module.scss
+++ b/src/components/Toolbar/Toolbar.module.scss
@@ -1,10 +1,11 @@
 
 header {
-    background-color: transparent;
+    // background-color: transparent;
     height: 70px;
-    background-color: rgba(	223,204,153, 1);
-    color: #5a5757;
+    background: rgba(0,0,0,0.8);
+    // color: #5a5757;
     display: flex;
+    color: rgb(223,204,153) ;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -234,7 +235,7 @@ header.sticky .Hamburger{
     position: relative;
     width: 100%;
     height: 2px;
-    background-color: #5a5757;
+    background-color: rgba(223,204,153, 1) ;
     display: flex;
     align-items: center;
     justify-content: center;
