--- a/src/components/RichTextEditor/RichTextEditor.module.scss
+++ b/src/components/RichTextEditor/RichTextEditor.module.scss
@@ -123,7 +123,8 @@
     border-bottom: 2px solid rgba(223,204,153, 1)  ;
     padding: 10px;
     width: 100%;
-    overflow: auto;
+    // overflow-y: auto;
+    // max-width: 500px;
     // margin-top: 0;
     // margin-bottom: 0;
     // box-shadow: 0 10px 20px rgba(0,0,0,.1);
