--- a/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
+++ b/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
@@ -7,10 +7,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    // width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     min-width: 100%;
-    min-height: 100%;
+    // min-height: 100%;
     background-position: 0 30%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,8 +25,51 @@
     margin-left: 100px;
     margin-right: 100px;
     margin-bottom: 50px;
-    background-color: #ffffff;
-    padding: 150px;
+    background: white;
+    max-width: 80%;
+    word-wrap: break-word;
+    // background: rgba(0,0,0,0.6);
+    padding: 100px 60px;
+}
+
+@media screen and (max-width: 800px) {
+    .TextContainer {
+        padding: 60px;
+        margin-left: 60px;
+        margin-right: 60px;
+        margin-bottom: 40px;
+    }
+    .Button {
+        &__Edit{
+            padding: 10px 20px;
+        }
+    
+        &__Delete {
+            padding: 10px 20px;
+        }
+
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .TextContainer {
+        padding: 30px;
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 10px;
+        
+    }
+
+    .Button {
+        &__Edit{
+            padding: 8px 16px;
+        }
+    
+        &__Delete {
+            padding: 8px 16px;
+        }
+
+    }
 }
 
 .Title{
@@ -78,6 +120,9 @@
         transform: translateY(-1px);
     }
 }
+// .Rating__Text {
+//     color: white;
+// }
 
 .TreatCount {
     display: inline;
