--- a/src/containers/Blogs/NewPetBlog/NewPetBlog.module.scss
+++ b/src/containers/Blogs/NewPetBlog/NewPetBlog.module.scss
@@ -122,9 +122,10 @@
 
 .Bg {
     
-    background-image: url(../../../assets/pet11.jpg);
+    // background-image: url(../../../assets/pet11.jpg);
     background-position: top center;
     min-height: 100vh;
+    background: rgba(0,0,0,0.8);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -135,6 +136,7 @@
     position: absolute;
     top: 50%;
     width: 100%;
+    // background: rgba(0,0,0,0.8);
     transform: translateY(-50%);
     padding: 0 20px;
 }
@@ -142,7 +144,8 @@
 .ContactForm {
     max-width: 1000px;
     margin: 0 auto;
-    background: rgba(0,0,0,0.8);
+    // background: rgba(0,0,0,0.8);
+    background:#F8F8FF;
     padding: 30px;
     border-radius: 5px;
     display: flex;
@@ -151,6 +154,8 @@
 
 .InputFields {
     display: flex;
+    
+    // background: rgba(0,0,0,0.7);
     flex-direction: column;
     margin-right: 4%;
     outline: none;
@@ -168,10 +173,11 @@
 .InputFields input[type="text"] {
     margin: 20px 0;
     background: transparent;
+    font-size: 20px;
     border: 0;
     border-bottom: 2px solid rgba(223,204,153, 1)  ;
     padding: 10px;
-    color: rgba(223,204,153, 0.7) ;
+    color: rgba(223,204,153, 1) ;
     width: 100%;
 
 }
@@ -185,12 +191,12 @@
     margin: 20px 0;
     background: transparent;
     text-transform: uppercase;
-
+    font-size: 20px;
     // border: 0;
     border: 2px solid rgba(223,204,153, 1);
     padding: 10px;
     // color: #c5ecfd;
-    color: rgba(223,204,153, 0.7) ;
+    color: rgba(223,204,153, 1) ;
     width: 100%;
     cursor: pointer;
     &:hover {
@@ -265,4 +271,13 @@
         width: 100%;
         margin: 5px 0;
     }   
+
+    .InputFields input[type="text"] {
+        font-size: 14px;
+    
+    }
+
+    .InputFields .InputButton {
+        font-size: 14px;
+    }
 }
