--- a/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
+++ b/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
@@ -7,7 +7,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    min-height: 100vh;
+    height: 100vh;
+    // min-height: 100vh;
     min-width: 100%;
     // min-height: 100%;
     background-position: 0 30%;
